[project]
name = "pytest-sanity"
version = "0.0.1"
authors = [
  { name="Param", email="parama4u@gmail.com" },
]
description = "Pytest support plugin to select and run random tests, or specific number of tests"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/parama4u/pytest-sanity"
"Bug Tracker" = "https://github.com/parama4u/pytest-sanity/issues"